--- a/.github/workflows/static-html.yml
+++ b/.github/workflows/static-html.yml
@@ -9,6 +9,10 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,7 +20,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Override deprecated upload-artifact v3
+      # Override deprecated v3 with dummy upload
       - name: Override deprecated artifact version
         uses: actions/upload-artifact@v4
         with:
@@ -24,7 +28,7 @@ jobs:
           path: README.md
         continue-on-error: true
 
-      - name: Upload artifact
+      - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: public
