--- a/.github/workf.github/workflows/deploy.yml
+++ b/.github/workf.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
-name: Deploy app-ads.txt to GitHub Pages
+name: Deploy app-ads.txt
 
 on:
   push:
-    branches: ["main"]
+    branches: [main]
   workflow_dispatch:
 
 permissions:
@@ -17,21 +17,21 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         
-      - name: Verify app-ads.txt exists
+      - name: Verify files
         run: |
           if [ ! -f public/app-ads.txt ]; then
             echo "❌ Error: public/app-ads.txt not found"
             exit 1
           fi
-          echo "✔ public/app-ads.txt exists"
+          echo "✔ All files exist"
           
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v4
         
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
         with:
-          path: 'public'  # Only upload the public folder
+          path: 'public'
           
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
